# tg-miniapp-qs

./: .gitignore  AGENTS.md  README.md
.claude/: CLAUDE.md
backend/: .env.example  Makefile  README.md  alembic.ini  pyproject.toml  pyrightconfig.json  socketservr.py
backend/alembic/: env.py
backend/alembic/versions/: 0ecb4cccc083_initial_schema_with_user_roles_and_.py  586c879fee70_add_thumbnail_fields_to_listing_photo.py  98e9d986d936_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: api_v1.py
backend/app/api/routes/: health.py  listings.py  telegram.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  base.py  favorite.py  listing.py  listing_photo.py  user.py
backend/app/schemas/: listing.py  photo.py  telegram.py  user.py
backend/app/services/: image_processing.py  telegram.py
backend/app/services/storage/: __init__.py  base.py  s3_backend.py  supabase_backend.py
backend/docker/: README.md  docker-compose.yml  init.sql  manage-docker.sh
backend/scripts/: seed_data.py
backend/tests/: test_health.py  test_listings.py
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/examples/: ThemeExample.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/components/listings/: AddListingDrawer.tsx  ListingCard.tsx  ListingDetail.tsx  SearchDrawer.tsx
frontend/src/components/photos/: PhotoPicker.tsx
frontend/src/components/profile/: ProfileDrawer.tsx
frontend/src/components/ui/: provider.tsx
frontend/src/config/: env.ts
frontend/src/features/listings/: ListingsView.tsx
frontend/src/hooks/: useCreateListing.ts  useListings.ts  useUploadPhotos.ts
frontend/src/providers/: TelegramProvider.tsx  telegramContext.ts
frontend/src/services/: apiClient.ts  telegram.ts
frontend/src/theme/: theme.ts
frontend/src/types/: listing.ts  user.ts
