[tool.poetry]
name = "telegram-mini-app-backend"
version = "0.1.0"
description = "Backend service for the Telegram school marketplace mini app."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.30.0"
python-telegram-bot = { version = "^21.3", extras = ["rate-limiter","webhooks"] }
httpx = "^0.27.0"
pydantic-settings = "^2.3.2"
python-dotenv = "^1.0.1"
passlib = { version = "^1.7.4", extras = ["bcrypt"] }
pyjwt = "^2.8.0"
greenlet = "^3.2.4"
psycopg2-binary = "^2.9.11"
boto3 = "^1.40.60"
python-multipart = "^0.0.20"
pillow = "^12.0.0"
supabase = "^2.23.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.6"
ruff = "^0.4.8"
black = "^24.4.2"
mypy = "^1.10.0"
types-passlib = "^1.7.7.12"
types-python-jose = "^3.3.4.20240106"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
